@@ -1,3 +1,7 @@
+2010-11-16  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Added feature #16360: [saltedpasswords] Provide a task for bulk update of passwords for use with saltedpasswords (Thanks to Marcus Krause)
+
 2010-11-16  Steffen Gebert  <steffen@steffen-gebert.de>
 
 	* Follow-up to #16403: Fixed inclusion of JS files in template.php (Thanks to Steffen Ritter)
